<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:background="@drawable/rounded_corners"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:onClick="hideKeyboard">

    <Button
        android:id="@+id/add_content_button"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_below="@id/add_code_name_edit_text"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_design"
        android:contentDescription="@string/add_code_gallery_button_description"
        android:text="Content"
        android:textColor="#FF424242"
        tools:targetApi="m" />

    <TextView
        android:textColor="#FF424242"
        android:id="@+id/add_code_public_flag_text_view"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_content_button"
        android:text="@string/add_code_public_status_text" />

    <Switch
        android:theme="@style/SCBSwitch"
        android:textColorHighlight="@color/colorPrimary"
        android:id="@+id/add_code_public_flag_switch"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_content_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/add_code_save_button"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_below="@id/add_code_password_edit_text"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_design"
        android:text="@string/add_code_save_button_text"
        android:textColor="#FF424242" />

    <EditText
        android:id="@+id/add_code_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@+id/add_code_public_flag_text_view"
        android:layout_marginTop="-2dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/add_code_password_hint"
        android:inputType="textPassword"
        android:textColor="@android:color/tertiary_text_light"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/add_code_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:ems="10"
        android:hint="@string/add_code_code_name_hint"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray"
        android:importantForAutofill="no" />

</RelativeLayout>