<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >

    <EditText
        android:layout_marginBottom="128dp"
        android:id="@+id/loginPass"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@id/loginName"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_below="@id/loginPass"
        android:layout_centerHorizontal="true"
        android:text="@string/login" />

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />

    <EditText
        android:id="@+id/loginName"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@android:color/black" />

</RelativeLayout>