<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:onClick="hideKeyboard"
    >

    <EditText
        android:id="@+id/loginPass"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@id/loginName"
        android:layout_marginBottom="128dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:scrollbarThumbHorizontal="@android:color/darker_gray"
        android:scrollbarThumbVertical="@android:color/darker_gray"
        android:textColor="@android:color/tertiary_text_light"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_below="@id/loginPass"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_design"
        android:text="@string/login"
        android:textColor="#FF424242" />

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />

    <EditText
        android:id="@+id/loginName"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:scrollbarThumbHorizontal="@android:color/darker_gray"
        android:scrollbarThumbVertical="@android:color/darker_gray"
        android:textColor="@android:color/tertiary_text_light"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray" />

</RelativeLayout>